tests/Fixtures/Torture/Bad/field_with_entry.g
// EXPECT G000
// Same as field_with_throws.g but for `entry`.
class C { entry int x; }
kernel { entry func Main() { } }
